--- a/KaposRestaurant/KaposRestaurant.csproj
+++ b/KaposRestaurant/KaposRestaurant.csproj
@@ -95,6 +95,9 @@
     <Compile Include="Services\Class1.cs" />
     <Compile Include="ViewModel\Class1.cs" />
     <Compile Include="View\Class1.cs" />
+    <Compile Include="View\CRUDVIew.xaml.cs">
+      <DependentUpon>CRUDVIew.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -108,6 +111,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\CRUDVIew.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Class1.cs" />
