--- a/KaposRestaurant/KaposRestaurant.csproj
+++ b/KaposRestaurant/KaposRestaurant.csproj
@@ -98,7 +98,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>KaposRestaurantBd.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Services\BBDDService.cs" />
+    <Compile Include="Services\BbddService.cs" />
     <Compile Include="ViewModel\Class1.cs" />
     <Compile Include="ViewModel\ConsultarPedidoModel.cs" />
     <Compile Include="View\Class1.cs" />
