--- a/KaposRestaurant/KaposRestaurant.csproj
+++ b/KaposRestaurant/KaposRestaurant.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Assets\restaurant.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
@@ -93,8 +96,7 @@
       <DependentUpon>KaposRestaurantBd.edmx</DependentUpon>
     </Compile>
     <Compile Include="Services\BBDDService.cs" />
-    <Compile Include="ViewModel\Class1.cs" />
-    <Compile Include="View\Class1.cs" />
+    <Compile Include="ViewModel\CrudVM.cs" />
     <Compile Include="View\CRUDVIew.xaml.cs">
       <DependentUpon>CRUDVIew.xaml</DependentUpon>
     </Compile>
@@ -106,7 +108,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Assets\Class1.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -151,6 +152,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Assets\restaurant.ico" />
     <Content Include="Model\KaposRestaurantBd.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>KaposRestaurantBd.Context.cs</LastGenOutput>
