--- a/KaposRestaurant/KaposRestaurant.csproj
+++ b/KaposRestaurant/KaposRestaurant.csproj
@@ -93,8 +93,11 @@
       <DependentUpon>KaposRestaurantBd.edmx</DependentUpon>
     </Compile>
     <Compile Include="Services\BBDDService.cs" />
+    <Compile Include="ViewModel\CategoriasViewModel.cs" />
     <Compile Include="ViewModel\Class1.cs" />
-    <Compile Include="View\Class1.cs" />
+    <Compile Include="View\CategoriasUserControl.xaml.cs">
+      <DependentUpon>CategoriasUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\CRUDVIew.xaml.cs">
       <DependentUpon>CRUDVIew.xaml</DependentUpon>
     </Compile>
@@ -111,6 +114,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\CategoriasUserControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\CRUDVIew.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
