--- a/KaposRestaurant/packages.config
+++ b/KaposRestaurant/packages.config
@@ -2,5 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.6.1" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net461" />
 </packages>
