--- a/KaposRestaurant/KaposRestaurant.csproj
+++ b/KaposRestaurant/KaposRestaurant.csproj
@@ -142,6 +142,7 @@
     <Page Include="View\ConsultarPedido.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+	</Page>
 
     <Page Include="View\CategoriasUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
